# clinical-agent

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.scheduler  README.md  debug_extractor.py  docker-compose.monitoring.yml  docker-compose.yml  pyrightconfig.json  railway.scheduler.toml  railway.toml  render.yaml  requirements.txt  start.sh
agents/: graph.py  state.py
agents/nodes/: alert_node.py  audit_logger.py  claim_comparator.py  claim_extractor.py  conflict_detector.py  faithfulness_eval.py  paper_monitor.py  report_generator.py
api/: main.py
db/: connection.py  schema.sql
integrations/: arxiv_service.py  llm_eval.py  mcp_gateway.py  rag_research.py
monitoring/: metrics.py  prometheus.yml
monitoring/grafana/dashboards/: clinical_agent.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
rust/claim-parser/: BENCHMARK.md  Cargo.toml
rust/claim-parser/src/: main.rs
rust/report-exporter/: Cargo.toml
rust/report-exporter/src/: main.rs
rust/similarity-engine/: Cargo.toml
rust/similarity-engine/src/: main.rs
scheduler/: daily_runner.py
tests/: test_graph.py
