[package]
name = "claim_parser"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "claim_parser"
path = "src/main.rs"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
regex = "1"
once_cell = "1"
tracing = "0.1"
tracing-subscriber = "0.3"