[package]
name = "report_exporter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "report_exporter"
path = "src/main.rs"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
typst = "0.13"
typst-pdf = "0.13"
typst-timing = "0.13"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
